fetchBlockRange makes single request for the full block range with gte and lte.
fetchFromMirrorNode incremental update logic (RsaRosterBootstrapPlugin.java):

Full build (history null): unchanged behavior — fetch all pages, resolve all era block ranges, build from scratch
Incremental (history exists): pages fetched newest-first; for each new era key encountered, fetchBlockRange is called immediately. If startBlock ≤ currentLastStartBlock → early stop, no update. When new eras are found, the old open-ended last era is closed (endBlock = newStartBlock - 1) and new eras are appended.
Tests added/updated (RsaRosterBootstrapPluginTest.java):

http500TriggersRetryThenSucceeds — updated third-run assertion: same-era content change is no longer detected (correct incremental behavior)
incrementalNoUpdateWhenActiveEraUnchanged — verifies no update when the active era's startBlock hasn't changed
incrementalUpdateWhenNewEraDetected — verifies that a new era closes the old one and appends correctly

____________________________________________________________________
Signed-off-by: berryware <231598+berryware@users.noreply.github.com>